# replicate-clip

./: cog.yaml  predict.py  pyproject.toml
.cog/: openapi_schema.json
